--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "firebase": "^12.8.0"
+  },
+  "devDependencies": {
+    "vite": "^7.3.1"
   }
 }
